# Engine-2

./: .gitattributes  .gitignore  CMakeLists.txt  Engine-2.cpp  Engine2  README.md  compute_debug.csv  create_debug.csv  jsonas.json
Debug/: Engine-2.ilk  Engine-2.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Engine-2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Engine-2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Example/birchTwoMesh/: 0_Leaves_Mesh.003.twomesh  2_Birch_Leaf_Autumn_1.twomesh  4_Plane.twomesh  5_Cube.twomesh
ext/glad/: glad.c
include/: tiny_gltf.h
include/glad/: glad.h
lib/: glfw3.lib
lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/: assetest.txt  error.cpp  error.h  main.cpp
src/Asset/: Asset.cpp  Asset.h  HelperAssets.cpp  Model.cpp  Model.h  TextureAsset.h
src/Component/: Component.h
src/ECS/: BaseComponents.h  ECS.h  ECS.hpp  Pool.h  SparseArray.h  View.h
src/Entity/: Entity.h
src/Graphics/: CullClustersCompute.glsl  DebugTexDrawFrag.glsl  Graphics_2.cpp  Graphics_2.h  HigherGraphics_2.cpp  HigherGraphics_2.h  Lights.h  MaterialShader.glsl  MaterialShaderVert.glsl  RenderPass.h  ShaderBuilder.h  ShadowVert.glsl  StaticPipelines.cpp  StaticPipelines.h  StaticPipelinesLib.h  TextureToDepthFrag.glsl  cameraObj.cpp  cameraObj.h  newDrawVert.glsl
src/Material/: Material.h
src/Mesh/: Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshStatic.cpp  Model.cpp  Model.h
src/Node/: Node.h
src/Scene/: SceneIO.cpp  SceneIO.h
src/System/: System.h
src/Utils/: BinaryFileUtility.h  (+3 more)
(+116 files in other folders)
